--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Santhosh Guntupalli
-#logo: /assets/img/headshot_circle.png
+logo: /assets/files/iClouddrive/IMG_0405
 #description: text below image
 #show_downloads: true
 theme: jekyll-theme-minimal
