--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Santhosh Guntupalli
-logo: /assets/files/iClouddrive/IMG_0405
+logo: "C:\Users\gvksg\OneDrive\Desktop\IMG_0405.JPG"
 #description: text below image
 #show_downloads: true
 theme: jekyll-theme-minimal
