--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Santhosh Guntupalli
-logo: "C:/Users/gvksg/OneDrive/Desktop/IMG_0405.JPG"
+logo: C:\Users\gvksg\OneDrive\Desktop
 #description: text below image
 #show_downloads: true
 theme: jekyll-theme-minimal
