--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Santhosh Guntupalli
-logo: \Users\gvksg\OneDrive\Desktop
+logo: \Users\gvksg\OneDrive\Desktop\images
 #description: text below image
 #show_downloads: true
 theme: jekyll-theme-minimal
