--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Santhosh Guntupalli
-logo: assets/IMG_0405.JPG
+logo: assets/close shot.JPG
 #description: text below image
 #show_downloads: true
 theme: jekyll-theme-minimal
