--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Santhosh Guntupalli
-#logo: assets/close_shot.png
+logo: assets/close_shot.png
 #description: text below image
 #show_downloads: true
 theme: jekyll-theme-minimal
