--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
 title: Santhosh Guntupalli
+email: santhosh.gutupalli09@gmail.comlk
 logo: assets/close_shot.png
 #description: text below image
 #show_downloads: true
