--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,7 @@
-theme: jekyll-theme-cayman
-
+title: Santhosh Guntupalli
+email: santhosh.gutupalli09@gmail.comlk
+logo: assets/close_shot.png
+#description: text below image
+#show_downloads: true
+theme: jekyll-theme-Architect
     
