--- a/_config.yml
+++ b/_config.yml
@@ -3,5 +3,5 @@ email: santhosh.gutupalli09@gmail.comlk
 logo: assets/close_shot.png
 #description: text below image
 #show_downloads: true
-theme: jekyll-theme-Architect
+theme: jekyll-theme-Cayman
     
