--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,7 @@
 title: Santhosh Guntupalli
 email: santhosh.gutupalli09@gmail.comlk
 logo: assets/close_shot.png
-description:
-<img src="assets/linkedin.png" alt="LinkedIn Logo" width="50" height="50">
-  
-#show_downloads: true
+description: <img src="assets/linkedin.png" alt="LinkedIn Logo" width="50" height="50">
+show_downloads: true
 theme: jekyll-theme-Minimal
 
