--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,9 @@
 title: Santhosh Guntupalli
 email: santhosh.gutupalli09@gmail.comlk
 logo: assets/close_shot.png
-description: <img src="assets/linkedin.png" alt="LinkedIn Logo" width="50" height="50">
+description: 
+<a href="https://www.linkedin.com/in/santhoshguntupalli" target="_blank">
+  <img align="left" alt="Arjun | LinkedIn" width="30px"  src="assets/linkedin.png" />
 show_downloads: true
 theme: jekyll-theme-Minimal
 
