--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,7 @@
 title: Santhosh Guntupalli
 email: santhosh.gutupalli09@gmail.comlk
 logo: assets/close_shot.png
-description: 
-<a href="https://www.linkedin.com/in/santhoshguntupalli" target="_blank">
-  <img align="left" alt="Arjun | LinkedIn" width="30px"  src="assets/linkedin.png" />
+description: <a href="https://www.linkedin.com/in/santhoshguntupalli" target="_blank">  <img align="left" alt="Arjun | LinkedIn" width="30px"  src="assets/linkedin.png" />
 show_downloads: true
 theme: jekyll-theme-Minimal
 
