--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Santhosh Guntupalli
 email: santhosh.gutupalli09@gmail.comlk
-logo: assets/dp.jpg
+logo: assets/dp2.jpg
 description: <a href="https://www.linkedin.com/in/santhoshguntupalli" target="_blank">  <img align="left" alt="Arjun | LinkedIn" width="30px"  src="assets/linkedin.png" />
 show_downloads: true
 theme: jekyll-theme-Minimal
